css/styles.css
body{
    background-color: #202462;
    overflow: hidden;
}
li{
   

     list-style: none;
     padding: 13px;
}
.active{
    color: white;
}

li a{
 color: #51c8fc;
 font-size: 18px;
 font-family: Verdana, Geneva, Tahoma, sans-serif

 
}
header{
    float: left;
}
.name{
    color: #51c8fc;
    font-family: Verdana, Geneva, Tahoma, sans-serif
}
.circular--square {
    /* height:400px;
    height: 400px; */
     border-radius: 50%;
     opacity: 0.5;
  }

  .img-container-block {
      margin-top: 60px;
    text-align: center;
   
  }
  .mydescr{
      float: right;
      clear: both;
  }
  a:link {
    text-decoration: none;
  }
nav ul li a:hover{
    color: white;

}
pre{
    display: block;
}

blockquote{
    opacity: 0.5;
    font-size: 1.4em;
    width:40%;
    margin:50px auto;
    font-family:Open Sans;
    font-style:italic;
    color: #555555;
    padding:1.2em 30px 1.2em 75px;
    border-left:8px solid #78C0A8 ;
    line-height:1.6;
    position: relative;
    background:#EDEDED;
  }
  
  blockquote::before{
    font-family:Arial;
    content: "\201C";
    color:#78C0A8;
    font-size:4em;
    position: absolute;
    left: 10px;
    top:-10px;
  }
  
  blockquote::after{
    content: '';
  }
  
  blockquote span{
    display:block;
    color:#333333;
    font-style: normal;
    font-weight: bold;
    margin-top:1em;
  }

  .knowNot{
    text-align: center;
   


  }
  .knowAboutDesc{
      text-align: center;
  }
  .knowAbout{
      clear: both;
      align-content: center;
      text-align: center;
      display: flex;
      margin: 0px auto;

  }
  .education, .experience, .skills, .interests_hobbies, .whyCode{
    display : flex;
    align-content: center;
      padding: 20px;
    flex-direction: row;
  }
h2{
    color:#51c8fc;
    font-size: 29px;
 
}
.aboutUser{
    color: white;
}
  .knowNot p{
    font-size: 27px;
    color: white;
  }
  input[type=text], select, textarea {
    width: 100%;
    padding: 12px;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
    margin-top: 6px;
    margin-bottom: 16px;
    resize: vertical;
  }
  
  input[type=submit] {
    background-color: #4CAF50;
    color: white;
    padding: 12px 20px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
  }
  
  input[type=submit]:hover {
    background-color: #45a049;
  }
  
  .container {
    border-radius: 5px;
    width: 60%;
    margin: 0 auto;
    background-color: #f2f2f2;
    padding: 20px;
  }
    
.portfolioPar{
    float: right;

}

